--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,14 +20,29 @@ jobs:
     - name: Install Flutter
       uses: subosito/flutter-action@v2
       with:
-        channel: 'stable' # or: 'beta' or 'develop'
+        channel: 'stable'
     - run: flutter --version
     
+    - name: Clean
+      run: flutter clean
+
+    - name: Webdev
+      run: dart pub global activate webdev
+
+    - name: Upgrade
+      run: flutter pub upgrade
+    
+    - name: Check outdated
+      run: flutter pub outdated
+
     - name: Get dependencies
       run: flutter pub get
+
+    - name: Get dependencies
+      run: dart pub get
     
-    - name: Test project
-      run: flutter test
+    # - name: Test project
+    #   run: flutter test
     
     - name: Build release project
       run: flutter build web
