--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
       run: rm -r ./build/web
 
     - name: Build release project
-      run:  webdev build --output web:build/web
+      run:  flutter build web
 
     - name: Upload production-ready build files
       uses: actions/upload-artifact@v2
